TASK: Use correct id in test matrix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - 'main'
 jobs:
   test:
-    name: "Test (PHP ${{ matrix.php }}, Flow ${{ matrix.neos }})"
+    name: "Test (PHP ${{ matrix.php }}, Flow ${{ matrix.flow }})"
 
     strategy:
       fail-fast: false
